# httpbin-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.rst  vagga.yaml
src/: lib.rs  response.rs  service.rs
src/pages/: headers.rs  index.rs  ip.rs  mod.rs  not_found.rs  status.rs  user_agent.rs  utf8.rs
src/templates/: custom_status.html  index.html  not_found.html
