[package]
name = "httpbin"
description = """
    A httpbin reimplementation in rust. Works as a library and as a standalone
    webserver binary. (not affiliated to the original httpbin)
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["tokio", "http", "httpbin"]
homepage = "http://github.com/tailhook/httpbin-rs"
documentation = "http://docs.rs/httpbin-rs"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
futures = "0.1.2"
quick-error = "1.1.0"
tokio-core = "0.1.0"
netbuf = "0.3.5"
argparse = "0.2.1"
env_logger = "0.3.5"
time = "0.1.0"
log = "0.3.6"
minihttp = { git="git://github.com/popravich/minihttp", rev="9637938" }
tk-bufstream = "0.2.2"
serde_json = "0.8.3"
httparse = "1.2.1"

[lib]
name = "httpbin"

[[bin]]
name = "httpbin"

[replace]
"tokio-service:0.1.0" = { git="https://github.com/tokio-rs/tokio-service", rev="da47a93" }
