[package]
name = "httpbin"
description = """
    A httpbin reimplementation in rust. Works as a library and as a standalone
    webserver binary. (not affiliated to the original httpbin)
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["tokio", "http", "httpbin", "command-line"]
categories = [
    "asynchronous",
    "network-programming",
    "command-line-utilities",
    ]
homepage = "http://github.com/tailhook/httpbin-rs"
documentation = "http://docs.rs/httpbin-rs"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
futures = "0.1.2"
quick-error = "1.1.0"
tokio-core = "0.1.6"
tokio-io = "0.1.0"
netbuf = "0.3.5"
argparse = "0.2.1"
env_logger = "0.3.5"
time = "0.1.0"
log = "0.3.6"
tk-bufstream = { git="https://github.com/tailhook/tk-bufstream", rev="4186137"}
tk-http = { git="https://github.com/swindon-rs/tk-http", rev="9c540d3" }
serde_json = "0.8.3"
httparse = "1.2.1"

[lib]
name = "httpbin"

[[bin]]
name = "httpbin"
