[package]
name = "httpbin"
description = """
    A httpbin reimplementation in rust. Works as a library and as a standalone
    webserver binary. (not affiliated to the original httpbin)
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["tokio", "http", "httpbin", "command-line"]
categories = [
    "asynchronous",
    "network-programming",
    "command-line-utilities",
    ]
homepage = "http://github.com/tailhook/httpbin-rs"
documentation = "http://docs.rs/httpbin-rs"
version = "0.3.3"
authors = ["paul@colomiets.name"]

[dependencies]
futures = "0.1.2"
quick-error = "1.1.0"
tokio-core = "0.1.6"
tokio-io = "0.1.0"
netbuf = "0.4.0"
argparse = "0.2.1"
env_logger = "0.3.5"
httpdate = "0.3.2"
log = "0.3.6"
tk-bufstream = "0.3.0"
tk-http = { version="0.3.1", default-features=false }
tk-listen = "0.1.0"
serde_json = "1.0.0"
httparse = "1.2.1"

[lib]
name = "httpbin"

[[bin]]
name = "httpbin"
doc = false
